fixed video autoplay bug, was hiding behind background color after initial play

--- a/src/routes/Entertainment/components/Intro/intro.module.scss
+++ b/src/routes/Entertainment/components/Intro/intro.module.scss
@@ -9,6 +9,7 @@
 }
 
 .welcomeContainer {
+    z-index: 2;
     width: 100%;
     display: flex;
     flex-direction: column;
@@ -58,5 +59,5 @@
     object-fit: cover;
     margin-top: 64px;
     max-width: 1200px;
-    z-index: -1;
+    z-index: 1;
 }
