--- a/src/routes/Entertainment/entertainment.module.scss
+++ b/src/routes/Entertainment/entertainment.module.scss
@@ -1,5 +1,6 @@
 .page {
   background: black;
+  z-index: -2;
 }
 
 .introSection {
